# pancancer-epigenetics

./: .gitignore  README.md  pyproject.toml  requirements.txt  roadmap.md
config/: paths.yaml  raw_data_registry.json
config/manifests/: gdc_cohort_freeze_tcga_primary_tumor_rnaseq_star_counts.json  gdc_manifest_tcga_primary_tumor_rnaseq_star_counts.txt  gdc_sample_sheet_tcga_primary_tumor_rnaseq_star_counts.tsv
data/: README.md
data/audit/: audit.ipynb  download_manifest.json  raw_file_audit.json
data/interim/: 21_harmonized_model_universe.csv
docs/: DATA_HARMONIZATION_PLAN.md  MODELING_POLICY.md  PROJECT_ARCHITECTURE.md  PROJECT_DIRECTION.md  README.md  TERMINOLOGY_GUIDE.md  language_normalization_audit.md  project_progress_tracker.md  scaffold_manifest.json  structure_migration_report_v3.md  workflow.md  wrokflow.md
docs/decisions/: 001_data_integration_strategy.md
envs/: environment.yml
notebooks/: README.md  checks.ipynb
notebooks/phase1_data_acquisition_and_auditing/: 100_dataset_inventory.ipynb  101_raw_file_audit.ipynb  102_tcga_rnaseq_cohort_freeze.ipynb  103_tcga_rnaseq_download_validation.ipynb  104_tcga_methylation_coverage_assessment.ipynb  105_tcga_methylation_cohort_freeze.ipynb  106_tcga_methylation_download_validation.ipynb
notebooks/phase1_download/: 10_dataset_inventory.ipynb
notebooks/phase2_eda/: 20_cross_dataset_overlap_analysis.ipynb  21_identifier_landscape_and_harmonization_strategy.ipynb  (+7 more)
reports/: README.md
results/: README.md
src/: README.md
src/utils/: checksums.py  (+2 more)
tests/: README.md  test_raw_data_registry.py
(+29 files in other folders)
