[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pancancer-epigenetics"
version = "0.1.0"
description = "A lineage-aware computational oncology framework for recurrent epigenetic-transcriptomic program discovery."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pancancer_epigenetics*"]